# flow_tech_pvt_ltd

./: CMakeLists.txt  Dashboard.qml  ForgotPasswordPage.qml  GasScreen.qml  LoadingScreen.qml  Loginpage.qml  Main.qml  MainScreen.qml  README.md  WE_Gas.cpp  WE_Gas.hpp  assets.qrc  main.cpp  water_eq.cpp  water_eq.hpp
deployment/: Installerappflow_tech_project.exe.md5
